--- a/src/components/OurProcess/ourprocess.css
+++ b/src/components/OurProcess/ourprocess.css
@@ -61,6 +61,7 @@
     font-weight: bold;
     font-size: 4rem;
     padding-top: 3.5rem;
+    padding-right: 0.5rem;
   }
 
   .grid-desc{
@@ -71,3 +72,16 @@
     font-weight: 200;
     font-size: 1.3rem;
   }
+
+    /* Small Laptop Styles */
+    @media only screen and (max-width: 1400px){
+      .grid-title{
+        font-size: 3.5rem;
+        padding-top: 3rem;
+      }
+    
+      .grid-desc{
+        padding-right: 3rem;
+        font-size: 1.2rem;
+      }
+    }
