--- a/src/components/OurWork/ourwork.css
+++ b/src/components/OurWork/ourwork.css
@@ -53,7 +53,7 @@
     .project-title{
         color: var(--secondary-color);
         font-weight: bold;
-        font-size: 3em;
+        font-size: 3rem;
         line-height: 1.1em;
         margin-top: 0.5rem;
     }
@@ -66,3 +66,18 @@
         border: 3px solid var(--secondary-color); 
         margin-top: 1rem;
     }
+
+/* Small Laptop Styles */
+@media only screen and (max-width: 1400px){
+    .project{
+        margin: 2rem 5%;
+    }
+    .project-title{
+        font-size: 2.2rem;
+    }
+    .project-link{
+        font-size: 1.1rem;
+        padding: 0.4rem 4rem;
+        margin-top: 0.8rem;
+    }
+}
