--- a/src/components/FormAndReviews/reviews.css
+++ b/src/components/FormAndReviews/reviews.css
@@ -31,6 +31,7 @@
     user-select: none;
     cursor: grab;
     box-shadow: 0px 2px 8px rgba(0,0,0,0.5);
+    overflow: hidden;
 }
 .review:active{
     cursor: grabbing;
@@ -53,10 +54,11 @@
         font-style: italic;
         color: #e9e9e9;
         letter-spacing: 0.1rem;
+         
     }
 
     /* Small Laptop Styles */
-    @media only screen and (max-width: 1400px){
+    @media only screen and (min-width: 991px) and (max-width: 1400px){
         #reviewsTitle{
             font-size: 3rem;
         }
@@ -72,3 +74,97 @@
             font-size: 1rem;
         }
     }
+
+    /* TABLET STYLES */
+@media only screen and (min-width: 650px) and (max-width: 990px){
+    #reviewsWrapper{
+        width: 55%;
+    }
+    
+    #reviewsTitle{
+        font-size: 2rem;
+        margin-left: 1vw;
+        margin-bottom: 1vw;
+    }
+    
+    #reviewsContainer{
+        height: 40vw;
+    }
+    
+    .review{
+        width: 22vw;
+        height: 33vw;
+        padding: 1vw 2vw;
+        border-radius: 10px;
+        margin: 1vw;
+        font-size: 0.9rem;
+    }
+        .star{
+            width: 16%;
+        }
+        .review .desc{
+            line-height: 1.5rem;
+        }
+}
+ 
+/* MOBILE STYLES */
+@media only screen and (max-width: 649px){
+    #reviewsWrapper{
+        width: 100%;
+    }
+    
+    #reviewsTitle{
+        font-size: 1.8rem;
+        text-align: center;
+        margin-left: 0;
+        margin-bottom: 1vh;
+    }
+    
+    #reviewsContainer{
+        width: 100%;
+        height: 35vh;
+    }
+    
+    .review{
+        width: 18vh;
+        padding: 1.5vh 1.8vh;
+        border-radius: 8px;
+        height: 25vh;
+        margin: 0.5vh;
+        font-size: 0.8rem;
+    }
+        .review .desc{
+            line-height: 1.2rem;
+            letter-spacing: 0.05rem;
+        }
+}
+
+/* SMALL  MOBILE STYLES */
+@media only screen and (max-width: 380px){
+    #reviewsTitle{
+        font-size: 1.6rem;
+        margin: 1vh 0;
+    }
+    .stars-wrapper{
+        margin:1vh;
+    }
+    
+    .review{
+        font-size: 0.7rem;
+        width: 20vh;
+    }
+}
+
+/* VERY SMALL  MOBILE STYLES */
+@media only screen and (max-width: 290px){
+    #reviewsTitle{
+        font-size: 1.5rem;
+        margin: 1vh 0;
+    }
+    
+    .review{
+        font-size: 0.6rem;
+        width: 18vh;
+        padding: 1vh 1.2vh;
+    }
+}
