--- a/src/components/OurProcess/ourprocess.css
+++ b/src/components/OurProcess/ourprocess.css
@@ -57,6 +57,8 @@
   #gridDesc3{grid-area: desc3;}
 
   .grid-title{
+    display: flex;
+    align-items: center;
     border-right: 10px solid var(--secondary-color);
     font-weight: bold;
     font-size: 4rem;
@@ -74,10 +76,11 @@
   }
 
     /* Small Laptop Styles */
-    @media only screen and (max-width: 1400px){
+    @media only screen and (min-width: 991px) and (max-width: 1400px){
       .grid-title{
         font-size: 3.5rem;
         padding-top: 3rem;
+        
       }
     
       .grid-desc{
@@ -85,3 +88,90 @@
         font-size: 1.2rem;
       }
     }
+
+    /* TABLET STYLES */
+@media only screen and (min-width: 650px) and (max-width: 990px){
+  #ourProcess{
+    padding: 4vw 0 6vw 0;
+}
+
+#ourProcessTitle{
+    font-size: 4rem;
+}
+
+#ourProcessGridWrapper{
+    width: 90%;
+    margin-left: 5%;
+}
+
+  #ourProcessGrid div:not(#ourProcessGrid div:nth-last-child(4)){
+    border-bottom: 8px solid var(--secondary-color);
+  }
+
+  .grid-title{
+    border-right: 8px solid var(--secondary-color);
+    font-size: 2.8rem;
+    padding-right: 1vw;
+    padding-top: 0;
+  }
+
+  .grid-desc{
+    padding-left: 1rem;
+    padding-right: 2vw;
+    padding: 1vw 2vw 1vw 2vw;
+    font-weight: 200;
+    font-size: 1.3rem;
+
+  }
+}
+ 
+/* MOBILE STYLES */
+@media only screen and (max-width: 649px){
+  #ourProcess{
+    min-height: 40vh;
+    padding: 4vh 0 2vh 0;
+}
+
+#ourProcessTitle{
+    margin-left: 10%;
+    padding: 0 1%;
+    font-size: 2rem;
+}
+
+#ourProcessTitleWrapper::after{
+    height: 5px;
+}
+
+#ourProcessGridWrapper{
+    width: 90%;
+    margin-left: 5%;
+}
+  #ourProcessGrid div:not(#ourProcessGrid div:nth-last-child(4)){
+    border-bottom: 5px solid var(--secondary-color);
+  }
+
+  .grid-title{
+    border-right: 5px solid var(--secondary-color);
+    font-size: 1.5rem;
+    padding-right: 1vh;
+    padding-top: 0;
+  }
+
+  .grid-desc{
+    padding: 1vh;
+    font-size: 0.9rem;
+  }
+}
+
+/* VERY SMALL  MOBILE STYLES */
+@media only screen and (max-width: 290px){
+  .grid-title{
+    font-size: 1.2rem;
+    padding-right: 0.5vh;
+  }
+
+  #ourProcessTitle{
+    font-size: 1.5rem;
+}
+
+}
