--- a/src/components/OurWork/ourwork.css
+++ b/src/components/OurWork/ourwork.css
@@ -81,3 +81,70 @@
         margin-top: 0.8rem;
     }
 }
+
+/* TABLET STYLES */
+@media only screen and (min-width: 650px) and (max-width: 990px){
+    #ourWork{
+        padding: 4vw 0;
+    }
+    #ourWorkTitle{
+        font-size: 2.5rem;
+    }
+    
+    #projectsWrapper{
+        margin-top: 5vw;
+        width: 90%;
+        margin-left: 5%;
+    }
+    
+    .project{
+        width: 45%;
+        margin: 3vw 2.5%;
+    }
+        .project-title{
+            font-size: 2.2rem;
+            margin-top: 2vw;
+        }
+        .project-link{
+            font-size: 1.3rem;
+            padding: 1vw 8vw;
+            margin-top: 2vw;
+        }
+}
+ 
+/* MOBILE STYLES */
+@media only screen and (max-width: 649px){
+    #ourWork{
+        padding: 4vh 0;
+    }
+    #ourWorkTitle{
+        font-size: 1.5rem;
+    }
+    
+    #projectsWrapper{
+        margin-top: 5vh;
+        width: 80%;
+        margin-left: 10%;
+    }
+    
+    .project{
+        width: 90%;
+        margin: 3vh 5%;
+    }
+        .project-title{
+            font-size: 2rem;
+            margin-top: 1vh;
+        }
+        .project-link{
+            font-size: 1.2rem;
+            padding: 0.5vh 6vh;
+            margin-top: 1vh;
+        }
+}
+
+/* VERY SMALL  MOBILE STYLES */
+@media only screen and (max-width: 290px){
+    #ourWorkTitle{
+        font-size: 0.9rem;
+    }
+}
