--- a/src/components/WeDo/wedo.css
+++ b/src/components/WeDo/wedo.css
@@ -55,3 +55,56 @@
         font-size: 1.3rem;
     }
 }
+
+/* TABLET STYLES */
+@media only screen and (min-width: 650px) and (max-width: 990px){
+    #weDo{
+        padding: 4vw 0;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    
+    #weDoTitle{
+        font-size: 7rem;
+        padding-left: 2%;
+        line-height: 8rem;
+    }
+    
+    #weDoGrid{
+        padding-top: 0;
+        padding-left: 5%;
+        width: 90%;
+    }
+    
+    .wedo-grid-item{
+        font-size: 1.4rem;
+    }
+}
+ 
+/* MOBILE STYLES */
+@media only screen and (max-width: 649px){
+    #weDo{
+        padding: 4vh 0;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    
+    #weDoTitle{
+        font-size: 5rem;
+        padding-left: 2%;
+        line-height: 5rem;
+    }
+    
+    #weDoGrid{
+        padding-left: 10%;
+        width: 80%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
+    
+    .wedo-grid-item{
+        font-size: 1.2rem;
+    }
+}
