--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -76,14 +76,14 @@ header{
     text-decoration: none;
     color: var(--main-text-color);
     background-color: var(--secondary-color);
-    font-weight: bold;
+    font-weight: 500;
     position: relative;
     top: 2vw;
     margin-left: 2rem;
     padding: 0.5vw 2vw;
     box-shadow: 0px 0px 8px #9b1d1d;
     border: 1px solid var(--main-color);
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 #pointsWrapper{
