--- a/src/components/MessageStatus/messagestatus.css
+++ b/src/components/MessageStatus/messagestatus.css
@@ -19,3 +19,9 @@
     width: 25%;
     aspect-ratio: 1/1;
 }
+/* MOBILE STYLES */
+@media only screen and (max-width: 649px){
+    #messageStatusAnim{
+        width: 50%;
+    }
+}
