--- a/src/components/FormAndReviews/form.css
+++ b/src/components/FormAndReviews/form.css
@@ -70,6 +70,31 @@
     border: none;
     cursor: pointer;
 }
+div:has(#submitButton){
+    position: relative;
+}
+#submitButtonShader{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    pointer-events: none;
+    overflow: hidden;
+    opacity: 0;
+}
+#submitButtonPlane{
+    position: absolute;
+    top:0;
+    right:100%;
+    height: 100%;
+    aspect-ratio: 1/1;
+    background-image: url(/img/paper-plane.svg);
+    background-position: center;
+    background-size: 80%;
+    background-repeat: no-repeat;
+}
 
 #contactForm textarea{
     resize: none;
