--- a/src/components/FormAndReviews/form.css
+++ b/src/components/FormAndReviews/form.css
@@ -37,11 +37,17 @@
     object-position: center;
     object-fit: contain;
 }
-#contactForm .input-wrapper:nth-child(2) img{
-    height: 90%;
-    width: 9%;
-    top: 5%;
+#formPersonIcon{
+    top: 10%;
     left: 4%;
+    height: 80%;
+    width: 8%;
+}
+#formEmailIcon{
+    top: 0%;
+    left: 2%;
+    height: 110%;
+    width: 11%;
 }
 #contactForm input:not(input[type="submit"]):focus, #contactForm textarea:focus{
     outline: 2px solid var(--secondary-color);
@@ -56,6 +62,10 @@
     padding-left: 15%;
     border: 3px solid var(--main-text-color);
     padding: 0.9rem 0;
+}
+
+#contactForm #phoneInput{
+    width: 101%;
 }
 
 #contactForm input{
