--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,13 @@ h2{
     font-weight: bold;
     font-size: 5.5rem;
 }
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
 /* TABLET STYLES */ 
 
 @media only screen and (min-width: 650px) and (max-width: 990px){ 
