--- a/src/components/FormAndReviews/form.css
+++ b/src/components/FormAndReviews/form.css
@@ -37,17 +37,18 @@
     object-position: center;
     object-fit: contain;
 }
-#formPersonIcon{
-    top: 10%;
-    left: 4%;
-    height: 80%;
-    width: 8%;
-}
-#formEmailIcon{
+
+#formEmailIcon:not(.company-name-icon){
     top: 0%;
     left: 2%;
     height: 110%;
     width: 11%;
+}
+#formPersonIcon, .input-wrapper img.company-name-icon{
+    top: 10%;
+    left: 4%;
+    height: 80%;
+    width: 8%;
 }
 #contactForm input:not(input[type="submit"]):focus, #contactForm textarea:focus{
     outline: 2px solid var(--secondary-color);
