--- a/src/components/OurWork/ourwork.css
+++ b/src/components/OurWork/ourwork.css
@@ -47,6 +47,7 @@
 }
     .project-img{
         width: 100%;
+        aspect-ratio: 1.8/1;
         object-fit: cover;
         object-position: center;
     }
