--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -86,6 +86,22 @@
     margin-left: 1vw;
 }
 
+.price-based{
+    text-align: center;
+    margin: 2vw 1vw;
+    font-size: 1.5rem;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.other-options{
+    text-align: center;
+    margin-bottom: 1vw;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 0 25%;
+}
+
 
 .react-multi-carousel-item{
     display: flex;
@@ -94,8 +110,31 @@
     padding: 10px 0 25px 0;
 }
 
+
+/* MEDIUM LAPTOP STYLES */
+@media only screen and (min-width: 1401px) and (max-width: 1920px){
+    .service-price{
+        font-size: 0.9rem;
+    }
+}
+
+/* SMALL LAPTOP STYLES */
+@media only screen and (min-width: 991px) and (max-width: 1400px){
+    .service-price{
+        font-size: 0.8rem;
+    }
+}
+
+
 /* TABLET STYLES */
 @media only screen and (min-width: 650px) and (max-width: 990px){
+    .price-based{
+        margin: 3vw 1vw;
+    }
+    .other-options{
+        padding: 0 10%;
+        margin-bottom: 2vw;
+    }
     #servicesSection{
         padding: 3vw 0;
     }
@@ -152,6 +191,18 @@
  
 /* MOBILE STYLES */
 @media only screen and (max-width: 649px){
+
+    .price-based{
+        margin: 4vw 2vw;
+        font-size: 1rem;
+    }
+    
+    .other-options{
+        margin-bottom: 3vw;
+        font-size: 1.2rem;
+        padding: 0 5%;
+    }    
+
     #servicesSection{
         padding: 6vw 0;
     }
