--- a/src/components/FormAndReviews/reviews.css
+++ b/src/components/FormAndReviews/reviews.css
@@ -31,7 +31,7 @@
     user-select: none;
     cursor: grab;
     box-shadow: 0px 2px 8px rgba(0,0,0,0.5);
-    overflow: hidden;
+    overflow: scroll;
 }
 .review:active{
     cursor: grabbing;
@@ -131,7 +131,7 @@
         border-radius: 8px;
         height: 25vh;
         margin: 0.5vh;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
     }
         .review .desc{
             line-height: 1.2rem;
