--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -273,7 +273,7 @@ header{
     #contactButton{
         font-size: 1rem;
         padding: 0.5vh 2vh;
-        margin-left: 4vh;
+        margin-left: 8vw;
     }
 
     #pointsWrapper{
@@ -289,9 +289,9 @@ header{
     }
     
     .get-in-touch-button{
-        margin-top: 3vh;
+        margin-top: 6vw;
         margin-right: 2vw;
-        width: 15vh;
+        width: 30vw;
         border: 2.5px solid var(--main-text-color);
         font-size: 0.7rem;
     }
