added some reviews

--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -110,6 +110,15 @@
     padding: 10px 0 25px 0;
 }
 
+/* MEDIUM AND SMALL LAPTOPS */
+@media only screen and (min-width: 991px) and (max-width: 1920px){
+    .service-card{
+        width: 25vw;
+        padding: 1vw 0;
+    }
+}
+
+
 
 /* MEDIUM LAPTOP STYLES */
 @media only screen and (min-width: 1401px) and (max-width: 1920px){
