--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -270,6 +270,11 @@ header{
  
 /* MOBILE STYLES */
 @media only screen and (max-width: 649px){
+    header{
+        position: relative;
+        min-height: 200vw;
+    }
+    
     #contactButton{
         font-size: 1rem;
         padding: 0.5vh 2vh;
