--- a/src/components/MessageStatus/messagestatus.css
+++ b/src/components/MessageStatus/messagestatus.css
@@ -1,27 +1,19 @@
-#messageStatusWrapper{
-    position: fixed;
-    display: flex;
+#messageSuccess{
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    position: fixed;
     top:0;
     left:0;
-    background-color: rgba(0,0,0,0.5);
-    z-index:900;
-    transition: 0.5s opacity;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    background-color: rgba(0,0,0,0.2);
+    transition: 0.3s opacity;
 }
-
-#messageStatusAnim{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#messageSuccessWrapper{
+    display: inline-block;
     width: 25%;
+    
     aspect-ratio: 1/1;
-}
-/* MOBILE STYLES */
-@media only screen and (max-width: 649px){
-    #messageStatusAnim{
-        width: 50%;
-    }
 }
