--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -99,7 +99,7 @@ header{
     font-family: var(--main-font);
     font-weight: 300;
     color: var(--third-color);
-    font-size: 2rem;
+    font-size: 1.5rem;
     width: 45%;
     margin-top: 4vw;
     margin-left: 2rem;
@@ -113,13 +113,15 @@ header{
     position: relative;
     color: var(--main-text-color);
     background-color: var(--secondary-color);
-    font-weight: 500;
+    font-family: var(--secondary-font);
+    font-weight: bold;
     position: relative;
     top: 2vw;
     margin-left: 2vw;
-    padding: 0.6vw 3vw;
-    box-shadow: 0px 0px 5px black;
-    font-size: 1.4rem;
+    padding: 0.8vw 2vw;
+    font-size: 1.6rem;
+    letter-spacing: 0.2rem;
+    box-shadow: 0px 0px 10px 4px rgba(255, 255, 255, 0.5);
 }
 #contactButton::after{
     content: "";
@@ -129,7 +131,7 @@ header{
     left:0;
     width: 100%;
     height: 100%;
-    background-color: #e03b3b;
+    background-color: #e47575;
     z-index: -1;
     transition: 0.4s left, 0.4s top;
 }
@@ -141,7 +143,7 @@ header{
     right:0;
     width: 100%;
     height: 100%;
-    background-color:#e03b3b;
+    background-color:#e47575;
     z-index: -1;
     transition: 0.4s right, 0.4s bottom;
 }
@@ -202,7 +204,7 @@ header{
         right: 4%;
     }
     #secondTagline{
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
 }
 
@@ -219,7 +221,7 @@ header{
 
     #contactButton{
         font-size: 1.4rem;
-        padding: 1vw 4.5vw;
+        padding: 1vw 3vw;
     }
     
     .get-in-touch-button{
@@ -242,7 +244,7 @@ header{
     }
     
     #secondTagline{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         width: 45%;
         margin-top: 1rem;
         margin-left: 5vw;
@@ -274,9 +276,10 @@ header{
         min-height: 200vw;
     }
     #contactButton{
+        margin-top: 3vw;
         font-size: 1rem;
-        padding: 0.5vh 2vh;
-        margin-left: 8vw;
+        padding: 2vw 4vw;
+        margin-left: 6vw;
     }
 
     #pointsWrapper{
@@ -312,7 +315,7 @@ header{
     }
     
     #secondTagline{
-        font-size: 1.2rem;
+        font-size: 1rem;
         width: 80%;
         margin-top: 3vh;
         margin-left:3vh;
